rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement3-2.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement
---
IF age >= $_param_00000000 <= $_param_00000000 THEN
	_param_00000000
ELSE IF name ~ $_param_00000000 THEN
	_param_00000000
END
