rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement5.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement5.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                18,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "18",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                120,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "120",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Valid",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "Valid",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo Oyedayo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "The Alien!",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "The Alien!",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Canada",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Canada'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Norway",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Norway'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Cold",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "Cold",
        description: None,
    },
]
