rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement6-2.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement5
---
IF age >= $_param_00000000 <= $_param_00000000 THEN
	(SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;)
ELSE IF name ~ $_param_00000000 THEN
	(SELECT * FROM $_param_00000000 WHERE country IS $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 20 START AT 5;)
ELSE IF (country IS $_param_00000000) OR (country IS $_param_00000000) THEN
	_param_00000000
ELSE
	_param_00000000
END
